insert a picture on git

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ ul{list-style:disc;list-style-position:inside;margin-left:1.5em;}
 .box{background:#fff;margin-bottom:4em;border:1px solid #ccc;padding:20px;border-radius:10px;}
 .box01{background:#efefef;padding:20px;margin-bottom:2em;font-size:125%;border-radius:5px;}
 .box01 li{margin-bottom:2em;}
-.box03 li{margin-bottom:0.5em;}
+.box03 li{margin-bottom:2em;}
 .box04{margin-bottom:2em;}
 </style>
 <h1>黒い画面とかよくわからない人のための、ゆるふわgit入門 ～github for Windows～</h1>
@@ -83,6 +83,7 @@ ul{list-style:disc;list-style-position:inside;margin-left:1.5em;}
 		githubにpublishして<br />
 		モテよう<br />
 		※モテるかどうかは分からない</p>
+	<p><img src="img/img01.gif" alt=""></p>
 </div>
 <div class="box">
 	<h2>流れ</h2>
