--- a/index.html
+++ b/index.html
@@ -29,7 +29,20 @@ ul{list-style:disc;list-style-position:inside;margin-left:1.5em;}
 .box01 li{margin-bottom:2em;}
 .box03 li{margin-bottom:2em;}
 .box04{margin-bottom:2em;}
+#social .socialb{
+	float:left;
+}
+#social{
+	position:absolute;
+	top:10px;
+	right:10px;
+}
 </style>
+<div id="social">
+	<div class="socialb"><iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fchocolatina.github.com%2Fgithub-for-windows-tutorial%2F&amp;send=false&amp;layout=button_count&amp;width=130&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:130px; height:21px;" allowTransparency="true"></iframe></div>
+	<div class="socialb"><a href="http://b.hatena.ne.jp/entry/http://chocolatina.github.com/github-for-windows-tutorial/" class="hatena-bookmark-button" data-hatena-bookmark-title="黒い画面とかよくわからない人のための、ゆるふわgit入門 ～github for Windows～" data-hatena-bookmark-layout="standard" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script></div>
+	<br clear="all">
+</div>
 <h1>黒い画面とかよくわからない人のための、ゆるふわgit入門 ～github for Windows～</h1>
 <p class="box05">by SHOKO OYAMADA (<a href="http://twitter.com/chocolatina" target="_blank">chocolatina</a>) @ paperboy&co.<span>{</span></p>
 <div class="box">
