--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>黒い画面とかよくわからない人のための、ゆるふわgit入門 ～github for Windows～</title>
-<meta charset="UTF-8" />
+<meta charset="Shift-JIS" />
 </head>
 <body>
 <style>
